--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,9 +1,4 @@
 @charset "utf-8";
-@import 'color.scss';
-@import 'variable.scss';
-@import 'font.scss';
-@import 'global.scss';
-
-.visual__text {
-  font-family: $font__archivo;
-}
+@import 'common/index';
+@import 'ui/header.scss';
+@import 'section/visual.scss';
