--- a/src/style/common/variable.scss
+++ b/src/style/common/variable.scss
@@ -1,4 +1,7 @@
 $size__max-inner: 1600px;
+$size__page-padding: 0 4rem;
+$size__title-line-height: 1.4;
+$size__p-line-height: 1.8;
 
 $size__pc-lg: 1440px;
 $size__pc-md: 1280px;
