--- a/src/style/common/mixin.scss
+++ b/src/style/common/mixin.scss
@@ -1,3 +1,11 @@
+@mixin util__flex($jc: flex-start, $ai: stretch, $gap: 0, $dir: row) {
+  display: flex;
+  justify-content: $jc;
+  align-items: $ai;
+  gap: $gap;
+  flex-direction: $dir;
+}
+
 @mixin util__get-size-inner() {
   width: 100%;
   max-width: $size__max-inner;
@@ -6,4 +14,39 @@
 
 @mixin util__get-text-glow($size: 2.5rem, $color: rgba(255, 255, 255, 0.4)) {
   text-shadow: 0 0 $size $color;
+}
+
+@mixin util__button($borderColor: rgba(255, 255, 255, 0.83), $bgColor: rgb(40, 40, 50), $fontSize: 1.4rem, $padding: 0.6rem 1.4rem) {
+  border-radius: 0.8rem;
+  font-size: $fontSize;
+  padding: 0.1rem;
+  position: relative;
+  overflow: hidden;
+
+  &__link {
+    @include util__flex(stretch, center);
+    height: 100%;
+    border-radius: 0.8rem;
+    padding: $padding;
+    background-color: $bgColor;
+  }
+
+  &__line {
+    border-radius: 10rem;
+    opacity: 0.95;
+    background: conic-gradient(
+      from 0deg at 50% 50%,
+      rgba(255, 255, 255, 0) 0deg,
+      rgba(217, 217, 217, 0) 176.757deg,
+      $borderColor 223.784deg,
+      rgba(194, 194, 194, 0) 274.054deg,
+      rgba(171, 171, 171, 0) 360deg
+    );
+    position: absolute;
+    filter: blur(1rem);
+    inset: -120%;
+
+    z-index: -1;
+    transform-origin: center;
+  }
 }
