--- a/src/style/common/module.scss
+++ b/src/style/common/module.scss
@@ -42,8 +42,7 @@
   overflow: hidden;
   mask-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 30%, rgb(0, 0, 0) 70%, rgba(0, 0, 0, 0) 100%);
   &__list {
-    display: flex;
-    justify-content: center;
+    @include util__flex(center);
     width: fit-content;
     gap: 0 3.2rem;
   }
@@ -55,4 +54,8 @@
 
 .bold {
   font-weight: 600;
+}
+
+.button {
+  @include util__button;
 }
