--- a/src/style/ui/header.scss
+++ b/src/style/ui/header.scss
@@ -8,8 +8,33 @@
 
   &__inner {
     @include util__get-size-inner;
-    height: 10rem;
-    display: flex;
-    justify-content: space-between;
+    @include util__flex(space-between);
+    height: 8rem;
+    padding: 0.8rem 0;
+  }
+
+  &__logo {
+    height: 100%;
+    a {
+      @include util__flex(center, center);
+      height: 100%;
+    }
+  }
+}
+
+.nav {
+  &__list {
+    @include util__flex(stretch, center, 1.6rem);
+    height: 100%;
+  }
+  &__item {
+    @include util__flex(stretch, center);
+    height: 100%;
+    a {
+      border-radius: 0.8rem;
+      background-color: rgb(40, 40, 50);
+      padding: 0.6rem 1.4rem;
+      font-size: 1.6rem;
+    }
   }
 }
