--- a/src/style/common/mixin.scss
+++ b/src/style/common/mixin.scss
@@ -16,7 +16,7 @@
   text-shadow: 0 0 $size $color;
 }
 
-@mixin util__button($borderColor: rgba(255, 255, 255, 0.83), $bgColor: rgb(40, 40, 50), $fontSize: 1.4rem, $padding: 0.6rem 1.4rem) {
+@mixin util__button($borderColor: rgba(255, 255, 255, 1), $bgColor: rgb(40, 40, 50), $fontSize: 1.4rem, $padding: 0.6rem 1.4rem) {
   border-radius: 0.8rem;
   font-size: $fontSize;
   padding: 0.1rem;
@@ -29,6 +29,8 @@
     border-radius: 0.8rem;
     padding: $padding;
     background-color: $bgColor;
+    position: relative;
+    z-index: 2;
   }
 
   &__line {
@@ -48,5 +50,8 @@
 
     z-index: -1;
     transform-origin: center;
+    &-container {
+      z-index: -1;
+    }
   }
 }
