--- a/src/style/common/mixin.scss
+++ b/src/style/common/mixin.scss
@@ -16,7 +16,7 @@
   text-shadow: 0 0 $size $color;
 }
 
-@mixin util__button($borderColor: rgba(255, 255, 255, 1), $bgColor: rgb(40, 40, 50), $fontSize: 1.4rem, $padding: 0.6rem 1.4rem) {
+@mixin util__button($borderColor: rgba(255, 255, 255, 1), $bgColor: rgb(30, 30, 40), $fontSize: 1.4rem, $padding: 0.6rem 1.4rem) {
   border-radius: 0.8rem;
   font-size: $fontSize;
   padding: 0.1rem;
@@ -31,6 +31,10 @@
     background-color: $bgColor;
     position: relative;
     z-index: 2;
+
+    &:focus {
+      outline: auto;
+    }
   }
 
   &__line {
