--- a/src/style/section/project.scss
+++ b/src/style/section/project.scss
@@ -1,4 +1,7 @@
 .project {
+  &__inner {
+    padding: 10rem 0;
+  }
   &__title {
     @include util__flex(space-between, center, 3.2rem);
     font-family: $font__archivo;
