style: footer add

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import 'common/index';
 @import 'ui/header.scss';
+@import 'ui/footer.scss';
 @import 'section/visual.scss';
 @import 'section/project.scss';
