--- a/src/style/common/module.scss
+++ b/src/style/common/module.scss
@@ -68,3 +68,19 @@
     padding: 0.2rem 1.4rem;
   }
 }
+
+.social {
+  @include util__flex(stretch, center, 1.6rem);
+  &__item {
+    @include util__flex(center, center);
+
+    .button__link {
+      padding: 1.2rem;
+    }
+  }
+  &__icon {
+    display: inline-block;
+    width: 2rem;
+    height: 2rem;
+  }
+}
