--- a/src/style/common/module.scss
+++ b/src/style/common/module.scss
@@ -76,11 +76,35 @@
 
     .button__link {
       padding: 1.2rem;
+
+      &:hover {
+        .social__icon::after {
+          opacity: 0.6;
+        }
+      }
     }
   }
   &__icon {
     display: inline-block;
     width: 2rem;
     height: 2rem;
+    position: relative;
+
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: $color__text-01;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      border-radius: 100%;
+      opacity: 0;
+      filter: blur(0.8rem);
+      will-change: opacity;
+      transition: opacity 0.3s;
+    }
   }
 }
