--- a/src/style/common/module.scss
+++ b/src/style/common/module.scss
@@ -35,6 +35,21 @@
       max-width: unset;
     }
   }
+
+  &__title {
+    @include util__flex(space-between, center, 3.2rem);
+    font-family: $font__archivo;
+    font-size: 3.2vw;
+    color: $color__text-02;
+    &::after {
+      display: block;
+      content: '';
+      width: 100%;
+      height: 0.2rem;
+      background: $color__text-02;
+      opacity: 0.4;
+    }
+  }
 }
 
 .ticker {
@@ -107,4 +122,8 @@
       transition: opacity 0.3s;
     }
   }
+}
+
+.glassbox {
+  @include util__get-box-glass();
 }
