--- a/src/style/common/mixin.scss
+++ b/src/style/common/mixin.scss
@@ -38,6 +38,7 @@
     position: relative;
     z-index: 2;
     border: 0.1rem solid rgba(255, 255, 255, 0.05);
+    cursor: pointer;
 
     &:focus {
       outline: auto;
