--- a/src/style/ui/header.scss
+++ b/src/style/ui/header.scss
@@ -1,3 +1,6 @@
+$btnPadding: 0.9rem;
+$barPos: 1.1rem;
+
 .header {
   position: fixed;
   width: 100%;
@@ -23,16 +26,82 @@
 }
 
 .nav {
+  @include util__flex(stretch, center);
+  &.tb-only {
+    display: none;
+  }
   &__list {
     @include util__flex(stretch, center, 1.6rem);
-    height: 100%;
   }
   &__item {
     @include util__flex(stretch, center);
     height: 100%;
   }
-  .button {
+  &__button {
     font-size: 1.6rem;
     font-weight: 500;
+    align-self: center;
+    width: 4rem;
+    height: 4rem;
+    display: none;
+
+    .button__link {
+      width: 100%;
+      height: 100%;
+      padding: $btnPadding;
+      position: relative;
+      outline: none;
+
+      &:focus {
+        outline: initial;
+      }
+    }
+  }
+  &__bar {
+    display: inline-block;
+    position: absolute;
+    pointer-events: none;
+    width: calc(100% - (#{$btnPadding} * 2));
+    height: 0.2rem;
+    background: $color__text-03;
+    border-radius: 1.6rem;
+    top: $barPos;
+    left: $btnPadding;
+
+    &:nth-child(2) {
+      top: calc(50% - 0.1rem);
+    }
+
+    &:last-child {
+      top: unset;
+      bottom: $barPos;
+    }
+  }
+}
+
+@media (max-width: $size__tb-md) {
+  .header {
+    background: rgba(0, 0, 0, 0.5);
+  }
+  .nav {
+    display: block;
+
+    &__list {
+      display: block;
+      &-item {
+        font-size: 1.8rem;
+      }
+    }
+    &.pc-only {
+      display: none;
+    }
+    // width: 100%;
+    // padding: $size__page-padding;
+    // position: absolute;
+    // top: 100%;
+    // left: 0;
+    &__button {
+      display: block;
+    }
   }
 }
