--- a/src/style/section/contact.scss
+++ b/src/style/section/contact.scss
@@ -1,5 +1,6 @@
 .contact {
   @include util__flex(stretch, center);
+  position: relative;
   &__inner {
   }
   &__text {
@@ -28,5 +29,9 @@
       @include util__flex(stretch, center, 1.2vw);
       padding: 0.6rem 2.4rem;
     }
+  }
+
+  &__bg {
+    @include util__get-bg-img('/image/bg08.jpg');
   }
 }
