--- a/src/style/ui/header.scss
+++ b/src/style/ui/header.scss
@@ -7,7 +7,7 @@ $barPos: 1.1rem;
   top: 0;
   left: 0;
   z-index: 100;
-  padding: $size__page-padding;
+  @include util__get-page-padding;
 
   &__inner {
     @include util__get-size-inner;
@@ -97,7 +97,7 @@ $barPos: 1.1rem;
     background: rgba(0, 0, 0, 0.7);
     box-shadow: 0 0 5rem rgba(0, 0, 0, 1);
     &__inner {
-      height: auto;
+      height: 8rem;
     }
   }
   .nav {
