feat: 버튼 클릭 이벤트 추가

--- a/src/style/section/project.scss
+++ b/src/style/section/project.scss
@@ -58,11 +58,14 @@
   }
 }
 
-@media (max-width: $size__tb-md) {
+@media (max-width: $size__tb-lg) {
   .project {
     &__list {
       grid-template-columns: 1fr;
       gap: 12rem;
     }
   }
+}
+
+@media (max-width: $size__tb-md) {
 }
