--- a/src/style/section/visual.scss
+++ b/src/style/section/visual.scss
@@ -22,6 +22,7 @@
 
     &.badge {
       @include util__button($badgeColor);
+      font-size: 1.8rem;
     }
     .badge__dot {
       display: inline-block;
@@ -36,8 +37,8 @@
         width: 100%;
         height: 100%;
         border-radius: 100%;
-        background: rgba(39, 221, 109, 0.4);
-        opacity: 0;
+        background: rgba(39, 221, 109, 0.3);
+        // opacity: 0;
         top: 0;
         left: 0;
         transform-origin: center;
