feat: gsap 애니메이션 추가

--- a/src/style/section/skill.scss
+++ b/src/style/section/skill.scss
@@ -13,6 +13,7 @@
   &__list {
     @include util__flex(stretch, flex-start, 1.6rem);
     margin-top: 6rem;
+    position: absolute;
   }
 
   &__icon {
