--- a/src/style/common/module.scss
+++ b/src/style/common/module.scss
@@ -38,16 +38,20 @@
 
   &__title {
     @include util__flex(space-between, center, 3.2rem);
-    font-family: $font__archivo;
+
     font-size: 3.2vw;
     color: $color__text-02;
-    &::after {
+    &-text {
+      font-family: $font__archivo;
+    }
+    &-bar {
       display: block;
       content: '';
       width: 100%;
       height: 0.2rem;
       background: $color__text-02;
       opacity: 0.4;
+      transform-origin: left;
     }
   }
 }
