feat: title 애니메이션 추가

--- a/src/style/common/module.scss
+++ b/src/style/common/module.scss
@@ -43,6 +43,7 @@
     color: $color__text-02;
     &-text {
       font-family: $font__archivo;
+      white-space: nowrap;
     }
     &-bar {
       display: block;
