--- a/src/style/section/skill.scss
+++ b/src/style/section/skill.scss
@@ -15,11 +15,17 @@
     flex-flow: row-reverse;
   }
 
+  &__container {
+    position: relative;
+    width: 200%;
+    margin-top: 6rem;
+  }
   &__list {
     @include util__flex(stretch, center, 1.6rem);
-    margin-top: 6rem;
+
     flex-grow: 1;
-    //position: absolute;
+    position: absolute;
+    top: 0;
   }
 
   &__icon {
@@ -48,6 +54,8 @@
 
   &__item {
     flex: 1 0 0;
+    height: 30rem;
+    min-width: 30rem;
     &-title {
       font-size: 2.4rem;
       &-container {
@@ -56,7 +64,7 @@
     }
     &-desc {
       @include util__get-text-shadow();
-      font-size: 1.6rem;
+      font-size: 1.8rem;
       margin-top: 2rem;
     }
   }
