--- a/src/style/section/project.scss
+++ b/src/style/section/project.scss
@@ -57,6 +57,7 @@
     &-tag {
       &-list {
         @include util__flex(stretch, center, 1.2rem);
+        flex-wrap: wrap;
         margin-top: 1.8rem;
       }
     }
@@ -85,6 +86,9 @@
         padding: 1.8rem 1.6rem;
         border-radius: 1.2rem;
       }
+    }
+    &__list {
+      gap: 6rem;
     }
   }
 }
