feat: visual text animation add

--- a/src/style/section/contact.scss
+++ b/src/style/section/contact.scss
@@ -65,6 +65,8 @@
     &__button {
       &-container {
         align-items: stretch;
+        gap: 2.4rem;
+        margin-top: 5.6rem;
       }
       .button__link {
         width: 100%;
