--- a/src/style/section/skill.scss
+++ b/src/style/section/skill.scss
@@ -17,7 +17,6 @@
 
   &__container {
     position: relative;
-    width: 200%;
     margin-top: 6rem;
   }
   &__list {
@@ -77,16 +76,28 @@
   @media (max-width: $size__tb-md) {
     &__text {
       font-size: 1.8rem;
+
+      .line {
+        display: inline-block;
+      }
     }
   }
 
   @media (max-width: $size__mb-lg) {
+    &__item {
+      &-desc {
+        font-size: 1.6rem;
+      }
+    }
     &__text {
       font-size: 1.6rem;
 
       .br {
         display: none;
       }
+    }
+    &__item {
+      width: 100%;
     }
   }
 }
