--- a/src/style/section/visual.scss
+++ b/src/style/section/visual.scss
@@ -9,6 +9,10 @@
     line-height: 1.25;
     text-transform: uppercase;
     @include util__get-text-glow(2.8rem, rgba(255, 255, 255, 0.6));
+
+    &-changer {
+      display: inline-block;
+    }
   }
   &__ticker {
     width: 45vw;
