--- a/src/style/section/skill.scss
+++ b/src/style/section/skill.scss
@@ -27,11 +27,11 @@
   }
 
   &__icon {
-    // top: -50%;
-    // right: 0;
-    // position: absolute;
-    .badge__link {
-      padding: 0.4rem;
+    width: 4rem;
+    height: 4rem;
+    svg {
+      width: 100%;
+      height: 100%;
     }
     &-inner {
       display: inline-block;
@@ -64,6 +64,7 @@
       @include util__get-text-shadow();
       font-size: 1.8rem;
       margin-top: 2rem;
+      white-space: pre-line;
     }
   }
   @media (max-width: $size__tb-lg) {
