--- a/src/style/common/font.scss
+++ b/src/style/common/font.scss
@@ -1,2 +1,3 @@
+$font__grotesk: var(--font-grotesk), var(--font-pretendard), sans-serif;
 $font__pretendard: var(--font-pretendard), sans-serif;
 $font__archivo: var(--font-archivo), var(--font-pretendard), sans-serif;
