--- a/src/style/common/mixin.scss
+++ b/src/style/common/mixin.scss
@@ -1,3 +1,44 @@
+@mixin pc-lg {
+  @media (max-width: $size__pc-lg) {
+    @content;
+  }
+}
+@mixin pc-md {
+  @media (max-width: $size__pc-md) {
+    @content;
+  }
+}
+
+@mixin tb-md {
+  @media (max-width: $size__tb-md) {
+    @content;
+  }
+}
+
+@mixin util__flex($jc: flex-start, $ai: stretch, $gap: 0, $dir: row) {
+  display: flex;
+  justify-content: $jc;
+  align-items: $ai;
+  gap: $gap;
+  flex-direction: $dir;
+}
+
+@mixin util__inner {
+  padding: $size__section-inner;
+
+  @include pc-lg {
+    padding: 0 7.2rem;
+  }
+
+  @include pc-md {
+    padding: 0 6rem;
+  }
+
+  @include tb-md {
+    padding: 0 2.4rem;
+  }
+}
+
 @mixin util__flex($jc: flex-start, $ai: stretch, $gap: 0, $dir: row) {
   display: flex;
   justify-content: $jc;
