--- a/src/style/common/module.scss
+++ b/src/style/common/module.scss
@@ -3,8 +3,10 @@
   position: absolute;
   z-index: -9999;
   text-indent: 9999;
-  width: 0;
-  height: 0;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  clip: rect(0, 0, 0, 0);
 }
 
 .pc-only {
