--- a/src/style/common/variable.scss
+++ b/src/style/common/variable.scss
@@ -1,12 +1,12 @@
 $size__max-inner: 1440px;
-$size__page-padding: 0 6rem;
+$size__page-padding: 1.6rem;
 $size__title-line-height: 1.4;
 $size__p-line-height: 1.8;
 
 $size__pc-lg: 1440px;
 $size__pc-md: 1280px;
 $size__pc-sm: 1024px;
-$size__tb-lg: 980px;
+$size__tb-lg: 990px;
 $size__tb-md: 768px;
 $size__mb-lg: 624px;
 $size__mb-md: 480px;
