--- a/src/style/common/_index.scss
+++ b/src/style/common/_index.scss
@@ -1,6 +1,6 @@
 @import 'color.scss';
 @import 'variable.scss';
 @import 'font.scss';
-@import 'mixin.scss';
+@import 'util.scss';
 @import 'global.scss';
 @import 'module.scss';
