--- a/src/style/common/util.scss
+++ b/src/style/common/util.scss
@@ -9,6 +9,12 @@
   }
 }
 
+@mixin tb-lg {
+  @media (max-width: $size__tb-lg) {
+    @content;
+  }
+}
+
 @mixin tb-md {
   @media (max-width: $size__tb-md) {
     @content;
@@ -24,19 +30,19 @@
 }
 
 @mixin util__inner {
-  padding: $size__section-inner;
+  padding: $size__page-padding;
 
-  @include pc-lg {
-    padding: 0 7.2rem;
-  }
+  // @include pc-lg {
+  //   padding: 0 7.2rem;
+  // }
 
-  @include pc-md {
-    padding: 0 6rem;
-  }
+  // @include pc-md {
+  //   padding: 0 6rem;
+  // }
 
-  @include tb-md {
-    padding: 0 2.4rem;
-  }
+  // @include tb-md {
+  //   padding: 0 2.4rem;
+  // }
 }
 
 @mixin util__flex($jc: flex-start, $ai: stretch, $gap: 0, $dir: row) {
@@ -54,7 +60,7 @@
 }
 
 @mixin util__get-page-padding {
-  padding: $size__page-padding;
+  padding: 0 $size__page-padding;
   @media (max-width: $size__tb-md) {
     padding: 0 4rem;
   }
@@ -62,6 +68,24 @@
     padding: 0 2.4rem;
   }
 }
+
+@mixin util__pseudo($width: 100%, $height: 100%) {
+  content: '';
+  display: block;
+  position: absolute;
+  width: $width;
+  height: $height;
+  left: 0;
+  top: 0;
+}
+
+@mixin util__center-transform {
+  top: 0;
+  left: 0;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+/* 수정 전 코드*/
 
 @mixin util__get-text-glow($size: 2.5rem, $color: rgba(255, 255, 255, 0.4)) {
   text-shadow: 0 0 $size $color;
